Atualizacao de fotos

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 <div class="col s6 m4 l2 offset-l1">
                     <div class="card">
                         <div class="card-image">
-                            <img src="https://i.pinimg.com/originals/d6/a7/3c/d6a73c41fc801b11f127afd80784d906.jpg">
+                            <img src="./img/coelho.jpg">
                             <span class="card-title">R$10,00</span>
                             <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">child_friendly</i></a>
                         </div>
@@ -89,7 +89,7 @@
                 <div class="col s6 m4 l2">
                     <div class="card">
                         <div class="card-image">
-                            <img src="https://i.pinimg.com/originals/d6/a7/3c/d6a73c41fc801b11f127afd80784d906.jpg">
+                            <img src="./img/elefante.jpg">
                             <span class="card-title">R$10,00</span>
                             <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">child_friendly</i></a>
                         </div>
@@ -102,7 +102,7 @@
                 <div class="col s6 m4 l2">
                     <div class="card">
                         <div class="card-image">
-                            <img src="https://i.pinimg.com/originals/d6/a7/3c/d6a73c41fc801b11f127afd80784d906.jpg">
+                            <img src="./img/flamingo.jpg">
                             <span class="card-title">R$10,00</span>
                             <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">child_friendly</i></a>
                         </div>
@@ -115,7 +115,7 @@
                 <div class="col s6 m4 l2">
                     <div class="card">
                         <div class="card-image">
-                            <img src="https://i.pinimg.com/originals/d6/a7/3c/d6a73c41fc801b11f127afd80784d906.jpg">
+                            <img src="./img/gamba.jpg">
                             <span class="card-title">R$10,00</span>
                             <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">child_friendly</i></a>
                         </div>
@@ -128,7 +128,7 @@
                 <div class="col s6 m4 l2">
                     <div class="card">
                         <div class="card-image">
-                            <img src="https://i.pinimg.com/originals/d6/a7/3c/d6a73c41fc801b11f127afd80784d906.jpg">
+                            <img src="./img/gato.jpg">
                             <span class="card-title">R$10,00</span>
                             <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">child_friendly</i></a>
                         </div>
@@ -141,7 +141,7 @@
                 <div class="col s6 m4 l2 offset-l1">
                     <div class="card">
                         <div class="card-image">
-                            <img src="https://i.pinimg.com/originals/d6/a7/3c/d6a73c41fc801b11f127afd80784d906.jpg">
+                            <img src="./img/koala.jpg">
                             <span class="card-title">R$10,00</span>
                             <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">child_friendly</i></a>
                         </div>
@@ -154,7 +154,7 @@
                 <div class="col s6 m4 l2">
                     <div class="card">
                         <div class="card-image">
-                            <img src="https://i.pinimg.com/originals/d6/a7/3c/d6a73c41fc801b11f127afd80784d906.jpg">
+                            <img src="./img/ovelha.jpg">
                             <span class="card-title">R$10,00</span>
                             <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">child_friendly</i></a>
                         </div>
@@ -167,7 +167,7 @@
                 <div class="col s6 m4 l2">
                     <div class="card">
                         <div class="card-image">
-                            <img src="https://i.pinimg.com/originals/d6/a7/3c/d6a73c41fc801b11f127afd80784d906.jpg">
+                            <img src="./img/rinoceronte.JPG">
                             <span class="card-title">R$10,00</span>
                             <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">child_friendly</i></a>
                         </div>
@@ -180,7 +180,7 @@
                 <div class="col s6 m4 l2">
                     <div class="card">
                         <div class="card-image">
-                            <img src="https://i.pinimg.com/originals/d6/a7/3c/d6a73c41fc801b11f127afd80784d906.jpg">
+                            <img src="./img/sapo.jpg">
                             <span class="card-title">R$10,00</span>
                             <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">child_friendly</i></a>
                         </div>
@@ -193,7 +193,7 @@
                 <div class="col s6 l2 hide-on-med-only">
                     <div class="card">
                         <div class="card-image">
-                            <img src="https://i.pinimg.com/originals/d6/a7/3c/d6a73c41fc801b11f127afd80784d906.jpg">
+                            <img src="./img/urso-polar.jpg">
                             <span class="card-title">R$10,00</span>
                             <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">child_friendly</i></a>
                         </div>
@@ -304,16 +304,17 @@
                 <div class="row">
                     <div class="col l6 s12">
                         <h5 class="white-text">Footer Content</h5>
-                        <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer
+                        <p class="grey-text text-lighten-4">Preços e condições exclusivos para o site www.nenens.com.br e para o televendas, podendo sofrer alterações sem prévia notificação.
                             content.</p>
                     </div>
                     <div class="col l4 offset-l2 s12">
                         <h5 class="white-text">Links</h5>
                         <ul>
-                            <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
-                            <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
-                            <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
-                            <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
+                                
+                            <li><a class="grey-text text-lighten-3" href="#!">Trabalhe conosco</a></li>
+                            <li><a class="grey-text text-lighten-3" href="#!">Termos e condições</a></li>
+                            <li><a class="grey-text text-lighten-3" href="#!">Políticas de privacidade</a></li>
+                            <li><a class="grey-text text-lighten-3" href="#!">Contato</a></li>
                         </ul>
                     </div>
                 </div>
@@ -321,7 +322,7 @@
             <div class="footer-copyright">
                 <div class="container">
                     © 2018 Copyright Mastertech Front End
-                    <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+                    <a class="grey-text text-lighten-4 right" href="https://mastertech.com.br/">Mastertech</a>
                 </div>
             </div>
         </footer>
