Atualizacao de fotos do destaque

--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
                     <div class="col s3 m2 l1 offset-l1">
                         <div class="card">
                             <div class="card-image">
-                                <img src="https://i.pinimg.com/originals/d6/a7/3c/d6a73c41fc801b11f127afd80784d906.jpg">
+                                <img src="./img/urso-polar.jpg">
                                 <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">child_friendly</i></a>
                             </div>
                         </div>
@@ -224,7 +224,7 @@
                     <div class="col s3 m2 l1">
                         <div class="card">
                             <div class="card-image">
-                                <img src="https://i.pinimg.com/originals/d6/a7/3c/d6a73c41fc801b11f127afd80784d906.jpg">
+                                <img src="./img/sapo.jpg">
                                 <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">child_friendly</i></a>
                             </div>
                         </div>
@@ -232,7 +232,7 @@
                     <div class="col s3 m2 l1">
                         <div class="card">
                             <div class="card-image">
-                                <img src="https://i.pinimg.com/originals/d6/a7/3c/d6a73c41fc801b11f127afd80784d906.jpg">
+                                <img src="./img/rinoceronte.JPG">
                                 <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">child_friendly</i></a>
                             </div>
                         </div>
@@ -240,7 +240,7 @@
                     <div class="col s3 m2 l1">
                         <div class="card">
                             <div class="card-image">
-                                <img src="https://i.pinimg.com/originals/d6/a7/3c/d6a73c41fc801b11f127afd80784d906.jpg">
+                                <img src="./img/ovelha.jpg">
                                 <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">child_friendly</i></a>
                             </div>
                         </div>
@@ -248,7 +248,7 @@
                     <div class="col s3 m2 l1 hide-on-small-only">
                         <div class="card">
                             <div class="card-image">
-                                <img src="https://i.pinimg.com/originals/d6/a7/3c/d6a73c41fc801b11f127afd80784d906.jpg">
+                                <img src="./img/koala.jpg">
                                 <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">child_friendly</i></a>
                             </div>
                         </div>
@@ -256,7 +256,7 @@
                     <div class="col s3 m2 l1 hide-on-small-only">
                         <div class="card">
                             <div class="card-image">
-                                <img src="https://i.pinimg.com/originals/d6/a7/3c/d6a73c41fc801b11f127afd80784d906.jpg">
+                                <img src="./img/gato.jpg">
                                 <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">child_friendly</i></a>
                             </div>
                         </div>
@@ -264,7 +264,7 @@
                     <div class="col s3 m2 l1 hide-on-med-and-down">
                         <div class="card">
                             <div class="card-image">
-                                <img src="https://i.pinimg.com/originals/d6/a7/3c/d6a73c41fc801b11f127afd80784d906.jpg">
+                                <img src="./img/gamba.jpg">
                                 <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">child_friendly</i></a>
                             </div>
                         </div>
@@ -272,7 +272,7 @@
                     <div class="col s3 m2 l1 hide-on-med-and-down">
                         <div class="card">
                             <div class="card-image">
-                                <img src="https://i.pinimg.com/originals/d6/a7/3c/d6a73c41fc801b11f127afd80784d906.jpg">
+                                <img src="./img/flamingo.jpg">
                                 <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">child_friendly</i></a>
                             </div>
                         </div>
@@ -280,7 +280,7 @@
                     <div class="col s3 m2 l1 hide-on-med-and-down">
                         <div class="card">
                             <div class="card-image">
-                                <img src="https://i.pinimg.com/originals/d6/a7/3c/d6a73c41fc801b11f127afd80784d906.jpg">
+                                <img src="./img/elefante.jpg">
                                 <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">child_friendly</i></a>
                             </div>
                         </div>
@@ -288,7 +288,7 @@
                     <div class="col s3 m2 l1 hide-on-med-and-down">
                         <div class="card">
                             <div class="card-image">
-                                <img src="https://i.pinimg.com/originals/d6/a7/3c/d6a73c41fc801b11f127afd80784d906.jpg">
+                                <img src="./img/coelho.jpg">
                                 <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">child_friendly</i></a>
                             </div>
                         </div>
@@ -303,12 +303,12 @@
             <div class="container">
                 <div class="row">
                     <div class="col l6 s12">
-                        <h5 class="white-text">Footer Content</h5>
+                        <h5 class="white-text">Neném</h5>
                         <p class="grey-text text-lighten-4">Preços e condições exclusivos para o site www.nenens.com.br e para o televendas, podendo sofrer alterações sem prévia notificação.
                             content.</p>
                     </div>
                     <div class="col l4 offset-l2 s12">
-                        <h5 class="white-text">Links</h5>
+                        <h5 class="white-text">Saiba Mais</h5>
                         <ul>
                                 
                             <li><a class="grey-text text-lighten-3" href="#!">Trabalhe conosco</a></li>
@@ -321,7 +321,7 @@
             </div>
             <div class="footer-copyright">
                 <div class="container">
-                    © 2018 Copyright Mastertech Front End
+                    © 2018 Alunos do curso de Front End Mastertech
                     <a class="grey-text text-lighten-4 right" href="https://mastertech.com.br/">Mastertech</a>
                 </div>
             </div>
