--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="shortcut icon" href="./img/favicon.png" type="image/x-icon">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link type="text/css" rel="stylesheet" href="node_modules/materialize-css/dist/css/materialize.min.css" media="screen,projection" />
     <link rel="stylesheet" href="style.css">
     <script defer type="text/javascript" src="node_modules/materialize-css/dist/js/materialize.min.js"></script>
     <script defer src="script.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-    <title>Projeto</title>
+    <title>Neném</title>
 </head>
 
 <body>
@@ -24,10 +24,9 @@
                     <i class="large material-icons">child_care</i>Neném</a>
                 <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
                 <ul class="right hide-on-med-and-down">
-                    <li><a href="sass.html">Sass</a></li>
-                    <li><a href="badges.html">Components</a></li>
-                    <li><a href="collapsible.html">Javascript</a></li>
-                    <li><a href="mobile.html">Mobile</a></li>
+                    <li><a href="sass.html">Faça seu cadastro</a></li>
+                    <li><a href="collapsible.html">Entre</a></li>
+                    <li><a href="mobile.html">Contato</a></li>
                 </ul>
             </div>
         </nav>
@@ -82,7 +81,8 @@
                             <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">child_friendly</i></a>
                         </div>
                         <div class="card-content">
-                            <p>Elefantinho</p>
+                            <p>Meu coelhinho:</p>
+                            <p>Lindo bebê coelho, tão fofo e peludo que vai fazer você morrer de amores</p>
                         </div>
                     </div>
                 </div>
