--- a/index.html
+++ b/index.html
@@ -20,22 +20,19 @@
         <nav>
             <div class="nav-wrapper">
 
-                <a href="#!" class="brand-logo">
+                <a href="index.html" class="brand-logo">
                     <i class="large material-icons">child_care</i>Neném</a>
                 <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
                 <ul class="right hide-on-med-and-down">
-                    <li><a href="sass.html">Faça seu cadastro</a></li>
-                    <li><a href="collapsible.html">Entre</a></li>
+                    <li><a href="login.html">Entre ou Faça seu cadastro</a></li>
                     <li><a href="mobile.html">Contato</a></li>
                 </ul>
             </div>
         </nav>
 
         <ul class="sidenav" id="mobile-demo">
-            <li><a href="sass.html">Sass</a></li>
-            <li><a href="badges.html">Components</a></li>
-            <li><a href="collapsible.html">Javascript</a></li>
-            <li><a href="mobile.html">Mobile</a></li>
+                <li><a href="login.html">Entre ou Faça seu cadastro</a></li>
+                <li><a href="mobile.html">Contato</a></li>
         </ul>
     </header>
     <main>
