--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
                             <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">child_friendly</i></a>
                         </div>
                         <div class="card-content">
-                            <p>I am a very simple card. I am good at containing small bits of information. I am
-                                convenient because I require little markup to use effectively.</p>
+                                <p>Meu elefantinho:</p>
+                                <p>Fofinho bebê elefante, tão fofo que vai fazer você morrer de amores</p>
                         </div>
                     </div>
                 </div>
@@ -104,8 +104,8 @@
                             <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">child_friendly</i></a>
                         </div>
                         <div class="card-content">
-                            <p>I am a very simple card. I am good at containing small bits of information. I am
-                                convenient because I require little markup to use effectively.</p>
+                                <p>Meu flamingozinho:</p>
+                                <p>Lindo bebê Flamingo, o rosinha mais fofo do universo</p>
                         </div>
                     </div>
                 </div>
@@ -117,8 +117,8 @@
                             <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">child_friendly</i></a>
                         </div>
                         <div class="card-content">
-                            <p>I am a very simple card. I am good at containing small bits of information. I am
-                                convenient because I require little markup to use effectively.</p>
+                                <p>Meu gambazinho:</p>
+                                <p>Lindo bebê gambá que de fedido não tem nada, você vai amar esse bebe</p>
                         </div>
                     </div>
                 </div>
@@ -130,8 +130,8 @@
                             <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">child_friendly</i></a>
                         </div>
                         <div class="card-content">
-                            <p>I am a very simple card. I am good at containing small bits of information. I am
-                                convenient because I require little markup to use effectively.</p>
+                                <p>Meu gatinho:</p>
+                                <p>Um gatinho, tão fofo e peludo que vai fazer você morrer de amores</p>
                         </div>
                     </div>
                 </div>
@@ -143,8 +143,8 @@
                             <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">child_friendly</i></a>
                         </div>
                         <div class="card-content">
-                            <p>I am a very simple card. I am good at containing small bits of information. I am
-                                convenient because I require little markup to use effectively.</p>
+                                <p>Minha coalinha:</p>
+                                <p>Lindo bebê coala, tão fofo que vai fazer você morrer de amores</p>
                         </div>
                     </div>
                 </div>
@@ -156,8 +156,8 @@
                             <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">child_friendly</i></a>
                         </div>
                         <div class="card-content">
-                            <p>I am a very simple card. I am good at containing small bits of information. I am
-                                convenient because I require little markup to use effectively.</p>
+                                <p>Minha ovelinha:</p>
+                                <p>Lindo bebê ovelha, fofinho e peludinho que vai fazer você morrer de amores</p>
                         </div>
                     </div>
                 </div>
@@ -169,8 +169,8 @@
                             <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">child_friendly</i></a>
                         </div>
                         <div class="card-content">
-                            <p>I am a very simple card. I am good at containing small bits of information. I am
-                                convenient because I require little markup to use effectively.</p>
+                                <p>Meu rinoceronte:</p>
+                                <p>Lindo bebê rinoceronte, gordinho fofo que vai fazer você morrer de amores</p>
                         </div>
                     </div>
                 </div>
@@ -182,8 +182,8 @@
                             <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">child_friendly</i></a>
                         </div>
                         <div class="card-content">
-                            <p>I am a very simple card. I am good at containing small bits of information. I am
-                                convenient because I require little markup to use effectively.</p>
+                                <p>Meu sapinho:</p>
+                                <p>Lindo bebê sapo, este lava o pé e não tem chulé, você vai adorar</p>
                         </div>
                     </div>
                 </div>
@@ -195,8 +195,8 @@
                             <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">child_friendly</i></a>
                         </div>
                         <div class="card-content">
-                            <p>I am a very simple card. I am good at containing small bits of information. I am
-                                convenient because I require little markup to use effectively.</p>
+                                <p>Meu ursinho:</p>
+                                <p>Lindo bebê ursinho, você vai adorar abraçar seu bebê</p>
                         </div>
                     </div>
                 </div>
